--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4  # Atualizando para a versão 4
+    - uses: actions/checkout@v4
     - name: Set up Python 3.10
       uses: actions/setup-python@v2  # Atualizando para a versão 2
       with:
@@ -35,4 +35,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest jogo.py
+        pytest game.py
