--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,9 +17,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
-      uses: actions/setup-python@v2  # Atualizando para a versão 2
+      uses: actions/setup-python@v2
       with:
         python-version: "3.10"
+        architecture: "x64"
+    - name: Use Node.js 20
+      uses: actions/setup-node@v3
+      with:
+        node-version: "20"
     - name: Navigate to the parent directory
       run: cd ..
     - name: Install dependencies
@@ -29,10 +34,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest game.py
+        pytest jogo.py
